<resources>
    <string name="app_name">Restaurant Inspection Ratings</string>

    <string name="restaurantName">Name of Restaurant</string>
    <string name="restaurantIconDesc">Description of Restaurant Icon</string>
    <string name="restaurantIssueFound">Number of Issues Found</string>
    <string name="restaurantIssueDate">Date of Issue</string>
    <string name="restaurantHazardIconDesc">Description of Hazard Icon</string>
    <string name="restaurantLocation">Location of Restaurant</string>
    <string name="detailedName">Name of Restaurant</string>
    <string name="detailedAddress">Address of Restaurant</string>
    <string name="detailedGPS">GPS Location of Restaurant</string>
    <string name="inspection_report">Inspection Report</string>
    <string name="detailIconDesc">Small Image of Restaurant</string>
    <string name="detailBigIconDesc">Large Image of Restaurant</string>
    <string name="inspectionNonCrit">Number of Non Critical Issues: </string>
    <string name="inspectionCrit">Number of Critical Issues: </string>
    <string name="inspectionDate">Date of Inspection</string>
    <string name="inspectionHazardLevel">Hazard Level</string>
    <string name="riskImageDesc">Image of Risk Level</string>
    <string name="menu_back">Back</string>
    <string name="detailedInspectionDate">Date</string>
    <string name="detailedInspectionType">Inspection Type</string>
    <string name="detailedInspectionCrit">Number of Critical Issues: </string>
    <string name="detailedInspectionNonCrit">Number of Non-Critical Issues: </string>
    <string name="detailedInspectionHazard">Hazard Level</string>
    <string name="detailedInspectionTitle">DETAIL OF INSPECTIONS</string>
    <string name="detailedInspectionList">List of Violation</string>
    <string name="detailedInspectionCheck">No Violations Yet</string>
    <string name="detailedInspectionIcon">Icon for Inspection</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_maps">To Map View</string>
    <string name="menu_to_list">To List View</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="title_activity_list">List of Restaurants</string>
    <string name="title_activity_res_details">Restaurant Details</string>
    <string name="title_activity_inspection">Inspection Details</string>
    <string name="mainloadtext">Loading…\nPlease Wait…</string>
    <string name="severity">Severity</string>
    <string name="desciprtion">Desciprtion</string>
    <string name="description">description</string>
    <string name="severitytext" translatable="false">severityText</string>
    <string name="sometext" translatable="false">SomeText</string>
    <string name="downloading">Downloading...</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait...</string>
    <string name="readingtimeout">Reading timeout, loading old data</string>
    <string name="downloadingfail">Downloading failed, loading saved data</string>
    <string name="pleasewait">Please wait...</string>
    <string name="downloadingcancel">Downloading cancelled</string>
    <string name="errordownloading">Error downloading file</string>
    <string name="complete">Complete</string>
    <string name="assigningdata">Assigning data...</string>
    <string name="initializingres">Initializing Restaurants...</string>
    <string name="initializingreport">Initializing Reports...</string>
    <string name="waitingtimeout">Waiting timeout, loading saved data</string>
    <string name="noinspectionyet">No Inspections Yet</string>
    <string name="thedetailoftheviolation">"The detail of the violation you clicked is "</string>
    <string name="thereisnoviolations">There is no violations under this inspection</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sept</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="Noinspection">No Inspection</string>
    <string name="hazardlevel">Hazard Level : </string>
    <string name="followup">Follow-up</string>
    <string name="routine">Routine</string>
    <string name="dayssinceinspection"> days since inspection</string>
    <string name="inspectionon">Inspected on: </string>
    <string name="critical">Critical</string>
    <string name="notcritical">Not Critical</string>
    <string name="v101">Plans/construction/alterations not in accordance with the Regulation [s. 3; s. 4]</string>
    <string name="v102">Operation of an unapproved food premises [s. 6(1)]</string>
    <string name="v103">Failure to hold a valid permit while operating a food service establishment [s. 8(1)]</string>
    <string name="v104">Permit not posted in a conspicuous location [s. 8(7)]</string>
    <string name="v201">Food contaminated or unfit for human consumption [s. 13]</string>
    <string name="v202">Food not processed in a manner that makes it safe to eat [s. 14(1)]</string>
    <string name="v203">Food not cooled in an acceptable manner [s. 12(a)]</string>
    <string name="v204">Food not cooked or reheated in a manner that makes it safe to eat [s. 14(1)]</string>
    <string name="v205">Cold potentially hazardous food stored/displayed above 4 °C. [s. 14(2)]</string>
    <string name="v206">Hot potentially hazardous food stored/displayed below 60 °C. [s. 14(2)]</string>
    <string name="v208">Foods obtained from unapproved sources [s. 11]</string>
    <string name="v209">Food not protected from contamination [s. 12(a)]</string>
    <string name="v210">Food not thawed in an acceptable manner [s. 14(2)]</string>
    <string name="v211">Frozen potentially hazardous food stored/displayed above -18 °C. [s. 14(3)]</string>
    <string name="v212">Operator has not provided acceptable written food handling procedures [s. 23]</string>
    <string name="v301">Equipment/utensils/food contact surfaces not maintained in sanitary condition [s. 17(1)]</string>
    <string name="v302">Equipment/utensils/food contact surfaces not properly washed and sanitized [s. 17(2)]</string>
    <string name="v303">Equipment/facilities/hot and cold water for sanitary maintenance not adequate [s. 17(3); s. 4(1)(f)]</string>
    <string name="v304">Premises not free of pests [s. 26(a)]</string>
    <string name="v305">Conditions observed that may allow entrance/harbouring/breeding of pests [s. 26(b)(c)]</string>
    <string name="v306">Food premises not maintained in a sanitary condition [s. 17(1)]</string>
    <string name="v307">Equipment/utensils/food contact surfaces are not of suitable design/material [s. 16; s. 19]</string>
    <string name="v308">Equipment/utensils/food contact surfaces are not in good working order [s. 16(b)]</string>
    <string name="v309">Chemicals cleansers and similar agents stored or labeled improperly [s. 27]</string>
    <string name="v310">Single use containers and utensils are used more than once [s. 20]</string>
    <string name="v311">Premises not maintained as per approved plans [s. 6(1)(b)]</string>
    <string name="v312">Items not required for food premises operation being stored on the premises [s. 18]</string>
    <string name="v313">Live animal on the premises excluding guide animal in approved areas [s. 25(1)]</string>
    <string name="v314">Operator has not provided acceptable written sanitation procedures [s. 24]</string>
    <string name="v315">Refrigeration units and hot holding equipment lack accurate thermometers [s. 19(2)]</string>
    <string name="v401">Adequate handwashing stations not available for employees [s. 21(4)]</string>
    <string name="v402">Employee does not wash hands properly or at adequate frequency [s. 21(3)]</string>
    <string name="v403">Employee lacks good personal hygiene clean clothing and hair control [s. 21(1)]</string>
    <string name="v404">Employee smoking in food preparation/processing/storage areas [s. 21(2)]</string>
    <string name="v501">Operator does not have FOODSAFE Level 1 or Equivalent [s. 10(1)]</string>
    <string name="v502">In operator’s absence no staff on duty has FOODSAFE Level 1 or equivalent [s. 10(2)]</string>

    <string name="favIndicatorDesc">Indicator of Favourited</string>
    <string name="favDialogTitle">Favourite Restaurants with Updated Inspection</string>
    <string name="high">High</string>
    <string name="moderate">Moderate</string>
    <string name="low">Low</string>
    <string name="sort_by_hazard_level">Sort by Hazard Level :</string>
    <string name="sort_by_number_of_critical_issues">Sort by number of Critical issues :</string>
    <string name="favourites">Favourites</string>
    <string name="less_than"><![CDATA[<=]]></string>
    <string name="greater_than"><![CDATA[>=]]></string>
    <string name="downloadButton">Download</string>
    <string name="downloadQuestion">New Update Available!</string>
    <string name="unablegetlocation">unable to get device\'s current location</string>
    <string name="dialogHint">Enter critical issues</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="all">All</string>
    <string name="searchHintList">Search...</string>
    <string name="all_restaurants_btn">All Restaurants</string>
    <string name="lat">lat</string>
    <string name="lng">lng</string>
    <string name="noresults">No results</string>
</resources>