<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="306dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/restaurantName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/restaurantIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/restaurantIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/restaurantIconDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        />

    <TextView
        android:id="@+id/restaurantIssueFound"
        android:layout_width="330dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/restaurantIssueFound"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/restaurantIcon"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />

    <TextView
        android:id="@+id/restaurantIssueDate"
        android:layout_width="330dp"
        android:layout_height="20dp"
        android:text="@string/restaurantIssueDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/restaurantIssueFound"
        app:layout_constraintTop_toBottomOf="@+id/restaurantIssueFound" />

</androidx.constraintlayout.widget.ConstraintLayout>