<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/condenseLoca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurantLocation"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/condenseName"
        app:layout_constraintTop_toBottomOf="@+id/condenseName" />

    <TextView
        android:id="@+id/condenseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/restaurantName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/condenseIcon"
        app:layout_constraintTop_toTopOf="@+id/condenseIcon" />

    <ImageView
        android:id="@+id/condenseIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/restaurantIconDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dish" />

</androidx.constraintlayout.widget.ConstraintLayout>